--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         </div>
     </nav>
   
-    <div class="container mt-4">
+    <div class="container mt-5">
         <div class="row container-fluid">
             <div class="col-lg-5">
-                <h3>Enter Recipe</h3>
+                <h3 class="my-4">Enter Recipe</h3>
                 <form>
                     <div class="mb-3">
                         <label for="recipe-name" class="form-label">Name:</label>
